# MyTargetDetector

./: .gitignore  CMakeLists.txt
include/mytargetdetector/common/: constants.hpp  types.hpp
include/mytargetdetector/detectors/: detector.hpp  yolo_detector.hpp
include/mytargetdetector/modules/: camera.hpp
src/: main.cpp
src/detectors/: yolo_detector.cpp
src/modules/: camera.cpp
